--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "base": "^3.0.0",
+    "fire": "^0.46.4",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
