Feat: Implement advanced login/signup, password reset, and pitch practice pages; fix Vite config for process.env

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "base": "^3.0.0",
     "fire": "^0.55.1",
+    "firebase": "^12.0.0",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
