--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.2",
+    "firebase": "^12.0.0",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
@@ -19,13 +20,16 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.24.1",
-    "firebase": "^12.0.0"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/node": "^24.1.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-toastify": "^4.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.9.1",
@@ -35,8 +39,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3",
-    "@typescript-eslint/eslint-plugin": "^8.3.0",
-    "@typescript-eslint/parser": "^8.3.0",
     "vite": "^5.3.5"
   }
 }
